--- a/BREAD/Parts/SAF_Fairing/bluedog_DeltaIV_DCSS_fairingBase_SAF.cfg
+++ b/BREAD/Parts/SAF_Fairing/bluedog_DeltaIV_DCSS_fairingBase_SAF.cfg
@@ -255,3 +255,34 @@ PART:NEEDS[Bluedog_DB/Parts/Delta/DCSS]
 			}
 	}
 }
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitchDiameter
+		switcherDescription = Top Node
+		switcherDescriptionPlural = Top Nodes
+		affectDragCubes = False
+		affectFARVoxels = False
+
+		SUBTYPE
+		{
+			name = 2.5m
+			transform = fairingTruss
+		}
+
+		SUBTYPE
+		{
+			name = 1.875m
+			transform = fairingTruss_1875
+		}
+		SUBTYPE
+		{
+			name = none
+			NODE
+			{
+				name = top
+				position = 0,-0.168605,0
+			}
+		}
+	}
+}
