--- a/BREAD/Parts/VulcanTank/Paint/VulcanPaint.cfg
+++ b/BREAD/Parts/VulcanTank/Paint/VulcanPaint.cfg
@@ -57,6 +57,51 @@
 		}
 		SUBTYPE
 		{
+			name = National Security
+			TEXTURE
+			{
+				texture = BREAD/Parts/VulcanTank/Paint/NSVulcan
+				transform = Tank
+			}
+		}
+		SUBTYPE
+		{
+			name = Saturn
+			TEXTURE
+			{
+				texture = BREAD/Parts/VulcanTank/Paint/SaturnVulcan
+				transform = Tank
+			}
+		}
+		SUBTYPE
+		{
+			name = Artemis
+			TEXTURE
+			{
+				texture = BREAD/Parts/VulcanTank/Paint/ArtemisVulcan
+				transform = Tank
+			}
+		}
+		SUBTYPE
+		{
+			name = Artemis
+			TEXTURE
+			{
+				texture = BREAD/Parts/VulcanTank/Paint/ArtemisVulcanBooster
+				transform = Tank
+			}
+		}
+		SUBTYPE
+		{
+			name = Terran
+			TEXTURE
+			{
+				texture = BREAD/Parts/VulcanTank/Paint/TerranVulcan
+				transform = Tank
+			}
+		}
+		SUBTYPE
+		{
 			name = No Decal
 			TEXTURE
 			{
