fixed minor mistake

--- a/BREAD/Parts/VulcanTank/Paint/VulcanPaint.cfg
+++ b/BREAD/Parts/VulcanTank/Paint/VulcanPaint.cfg
@@ -84,7 +84,7 @@
 		}
 		SUBTYPE
 		{
-			name = Artemis
+			name = Artemis Booster
 			TEXTURE
 			{
 				texture = BREAD/Parts/VulcanTank/Paint/ArtemisVulcanBooster
